--- a/css/styles.css
+++ b/css/styles.css
@@ -669,6 +669,69 @@ ul {
 	margin-left: 10px;
 }
 
+.follow {
+	margin-left: auto;
+	padding-top: 12px;
+}
+
+.footer-input {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.25;
+	color: rgba(255, 255, 255, 0.6);
+	width: 358px;
+	height: 50px;
+	padding-left: 16px;
+	background-color: var(--top-main-bck);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  	border-radius: 4px;
+  	color: var(--menu-bck);
+  	margin-top: 20px;
+}
+
+.footer-input:focus {
+	border: 2px solid rgba(255, 255, 255, 0.3);
+	outline: none;
+}
+
+.follow-btn {
+	display: inline-flex;
+	align-items: center;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	letter-spacing: 0.06em;
+	width: 200px;
+  	height: 50px;
+	margin-left: 12px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	background-color: var(--accent-color);
+	color: var(--menu-bck);
+	padding: 10px 28px;
+	transition-property: color background-color box-shadow;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.follow-btn:hover,
+.follow-btn:focus {
+	background: var(--button-hover);
+}
+
+.follow-btn::after {
+	content: '';
+	display: inline-block;
+	width: 24px;
+	height: 24px;
+	margin-left: 10px;
+	background-image: url('./images/icons.svg#icon-send');
+	fill: var(--menu-bck);
+}
+
 /* Portfolio section */
 
 .portfolio {
