--- a/css/styles.css
+++ b/css/styles.css
@@ -720,15 +720,24 @@ ul {
 .follow-btn:hover,
 .follow-btn:focus {
 	background: var(--button-hover);
+	cursor: pointer;
 }
 
-.follow-btn::after {
+/* .follow-btn::after {
 	content: '';
 	display: inline-block;
 	width: 24px;
 	height: 24px;
 	margin-left: 10px;
 	background-image: url('./images/icons.svg#icon-send');
+	fill: var(--menu-bck);
+} */
+
+.icon-send {
+	display: inline-block;
+	width: 24px;
+	height: 24px;
+	margin-left: 10px;
 	fill: var(--menu-bck);
 }
 
@@ -846,4 +855,252 @@ button:focus {
 	font-size: 16px;
 	line-height: 1.88;
 	color: var(--primary-contact-color);
+}
+
+/* Modal window */
+
+.backdrop {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.2);
+	opacity: 1;
+  	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+	opacity: 0;
+	pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+	transform: translate(-50%, 50%) scale(0.5);
+}
+
+.modal {
+  	position: relative;
+  	top: 50%;
+  	left: 50%;
+  	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  	opacity: 1;
+	transform: translate(-50%, -50%) scale(1);
+  	width: 528px;
+  	height: 581px;
+	background: var(--menu-bck);
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	border-radius: 4px;
+}
+
+.btn-close {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	width: 30px;
+	height: 30px;
+	border-radius: 50%;
+	background: var(--menu-bck);
+	border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.btn-close:hover {
+	background-color: var(--menu-bck);
+	box-shadow: none;
+}
+
+.icon-close {
+	position: absolute;
+	top: -1px;
+	right: -1px;
+	width: 30px;
+	height: 30px;
+	padding: 10px;
+	fill: var(--logo-text-color);
+}
+
+.icon-close:hover {
+	fill: var(--accent-color);
+	color: var(--accent-color);
+	cursor: pointer;
+	box-shadow: none;
+}
+
+.form {
+	position:absolute;
+	top: 0;
+	left: 0;
+	width: 528px;
+  	height: 581px;
+	padding: 40px;
+}
+
+.form h2 {
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 1.15;
+	text-align: center;
+}
+
+.form p {
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.71;
+}
+
+.form a {
+	color: var(--accent-color);
+	text-decoration: underline;
+}
+
+.form span {
+	font-size: 12px;
+	line-height: 1.16;
+	color: var(--primary-contact-color);
+}
+
+.form-field {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	margin-top: 28px;
+	width: 100%;
+	height: 40px;
+}
+
+.form-label {
+	position: absolute;
+	top: -50%;
+}
+
+.form-input {
+	display: block;
+	width: 100%;
+	height: 40px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	padding-left: 42px;
+	outline: none;
+}
+
+.form-input:focus,
+.form-input:hover {
+	border-color: var(--accent-color);
+	fill: var(--accent-color);
+	color: var(--accent-color);
+	cursor: pointer;
+}
+
+.icon {
+	position: absolute;
+	width: 18px;
+	height: 18px;
+	fill: var(--primary-text-color);
+	color: var(--primary-text-color);
+	top: 50%;
+	transform: translate(0, -50%);
+	left: 15px;
+}
+
+.comment-area {
+	display: flex;
+	width: 100%;
+	height: 120px;
+	resize: none;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	margin-top: 4px;
+	padding: 12px 16px;
+	outline: none;
+}
+
+.comment-area:hover {
+	border-color: var(--accent-color);
+	cursor: pointer;
+}
+
+.comment-field {
+	display: flex;
+	flex-direction: column;
+	font-size: 12px;
+	color: rgba(117, 117, 117, 0.5);
+	margin-top: 10px;
+}
+
+.comment-field:hover,
+.comment-field:focus {
+	border-color: var(--accent-color);
+}
+
+.form-field:focus-within .icon {
+	fill: var(--accent-color);
+}
+
+.checkbox {
+	appearance: none;
+}
+
+.checkbox-label {
+	display: flex;
+	align-items: center;
+	margin-top: 20px;
+}
+
+.icon-check {
+	display: block;
+	width: 15px;
+	height: 15px;
+	background-color: var(--menu-bck);
+	margin-left: 12px;
+  	margin-right: 9px;
+	fill: var(--primary-text-color);
+	color: var(--primary-text-color);
+}
+
+.icon-check:focus {
+	fill: var(--accent-color);
+}
+
+.icon-check-active {
+	position: absolute;
+	width: 16px;
+	height: 16px;
+	left: 52px;
+	opacity: 0;
+}
+
+.checkbox:checked + .icon-check-active {
+	opacity: 1;
+}
+
+.send {
+	font-family: 'Roboto';
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	letter-spacing: 0.06em;
+	display: block;
+	margin-top: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	width: 200px;
+	height: 50px;
+  	padding: 10px 55px;
+	color: var(--menu-bck);
+	border-color: var(--accent-color);
+	background: var(--accent-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	transition-property: color background-color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.send:hover {
+	background: var(--button-hover);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	cursor: pointer;
 }
