--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ ul {
 	color: var(--primary-text-color);
 	transition-property: color;
 	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);	
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-top-center a:hover,
@@ -195,7 +195,7 @@ ul {
 	color: var(--primary-contact-color);
 	transition-property: color fill;
 	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);	
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts a:hover,
@@ -241,6 +241,7 @@ ul {
 	padding: 10px 32px;
 	background: var(--accent-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border: none;
 	border-radius: 4px;
 	font-weight: 700;
 	font-size: 16px;
@@ -257,41 +258,6 @@ ul {
 	background-color: var(--button-hover);
 }
 
-.backdrop {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: rgba(0, 0, 0, 0.2);
-	opacity: 1;
-	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-hidden {
-	opacity: 0;
-	pointer-events: none;
-}
-
-.backdrop.is-hidden .modal {
-	transform: translate(-50%, 50%) scale(0.5);
-}
-
-.modal {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	opacity: 1;
-	transform: translate(-50%, -50%) scale(1);
-	width: 528px;
-	height: 581px;
-	padding: 15px;
-	background: var(--menu-bck);
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
-}
-
 .button-close {
 	position: absolute;
 	top: 8px;
@@ -305,15 +271,6 @@ ul {
 
 .button-close:hover {
 	background-color: var(--menu-bck);
-}
-
-.icon-close {
-	position: absolute;
-	top: 8px;
-	right: 8px;
-	width: 11px;
-	height: 11px;
-	fill: var(--logo-text-color);
 }
 
 .middle-main {
@@ -546,7 +503,7 @@ ul {
 .company a {
 	transition-property: color fill;
 	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);	
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .company a:hover,
@@ -685,9 +642,9 @@ ul {
 	background-color: var(--top-main-bck);
 	border: 1px solid rgba(255, 255, 255, 0.3);
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  	border-radius: 4px;
-  	color: var(--menu-bck);
-  	margin-top: 20px;
+	border-radius: 4px;
+	color: var(--menu-bck);
+	margin-top: 20px;
 }
 
 .footer-input:focus {
@@ -698,16 +655,17 @@ ul {
 .follow-btn {
 	display: inline-flex;
 	align-items: center;
-	font-family: 'Roboto';
+	font-family: "Roboto";
 	font-style: normal;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.88;
 	letter-spacing: 0.06em;
 	width: 200px;
-  	height: 50px;
+	height: 50px;
 	margin-left: 12px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border: none;
 	border-radius: 4px;
 	background-color: var(--accent-color);
 	color: var(--menu-bck);
@@ -722,16 +680,6 @@ ul {
 	background: var(--button-hover);
 	cursor: pointer;
 }
-
-/* .follow-btn::after {
-	content: '';
-	display: inline-block;
-	width: 24px;
-	height: 24px;
-	margin-left: 10px;
-	background-image: url('./images/icons.svg#icon-send');
-	fill: var(--menu-bck);
-} */
 
 .icon-send {
 	display: inline-block;
@@ -862,12 +810,12 @@ button:focus {
 .backdrop {
 	position: fixed;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	top: 0;
 	left: 0;
 	background: rgba(0, 0, 0, 0.2);
 	opacity: 1;
-  	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -875,232 +823,240 @@ button:focus {
 	pointer-events: none;
 }
 
-.backdrop.is-hidden .modal {
-	transform: translate(-50%, 50%) scale(0.5);
-}
-
 .modal {
-  	position: relative;
-  	top: 50%;
-  	left: 50%;
-  	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  	opacity: 1;
-	transform: translate(-50%, -50%) scale(1);
-  	width: 528px;
-  	height: 581px;
-	background: var(--menu-bck);
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-	border-radius: 4px;
-}
-
-.btn-close {
-	position: absolute;
-	top: 8px;
-	right: 8px;
-	width: 30px;
-	height: 30px;
-	border-radius: 50%;
-	background: var(--menu-bck);
-	border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.btn-close:hover {
-	background-color: var(--menu-bck);
-	box-shadow: none;
-}
-
-.icon-close {
-	position: absolute;
-	top: -1px;
-	right: -1px;
-	width: 30px;
-	height: 30px;
-	padding: 10px;
-	fill: var(--logo-text-color);
-}
-
-.icon-close:hover {
-	fill: var(--accent-color);
-	color: var(--accent-color);
-	cursor: pointer;
-	box-shadow: none;
-}
-
-.form {
-	position:absolute;
-	top: 0;
-	left: 0;
-	width: 528px;
-  	height: 581px;
+	position: relative;
 	padding: 40px;
 }
 
-.form h2 {
+.form {
+	display: flex;
+	width: 448px;
+	flex-direction: column;
+	align-items: center;
+	text-align: left;
+	padding: 0;
+}
+
+.form-group-field {
+	width: 100%;
+	font-size: 16px;
+	line-height: 1.125;
+	margin-bottom: 20px;
+}
+
+.form-title {
 	font-weight: 700;
 	font-size: 20px;
 	line-height: 1.15;
 	text-align: center;
+	color: var(--primary-text-color);
+	margin-bottom: 12px;
 }
 
-.form p {
-	font-weight: 400;
-	font-size: 14px;
-	line-height: 1.71;
-}
-
-.form a {
-	color: var(--accent-color);
-	text-decoration: underline;
-}
-
-.form span {
+.form-label {
+	display: block;
 	font-size: 12px;
-	line-height: 1.16;
+	line-height: 1.17;
+	letter-spacing: 0.01em;
+	margin-bottom: 4px;
+	padding: 0;
 	color: var(--primary-contact-color);
 }
 
 .form-field {
 	position: relative;
-	display: flex;
-	flex-direction: column;
-	margin-top: 28px;
 	width: 100%;
-	height: 40px;
-}
-
-.form-label {
-	position: absolute;
-	top: -50%;
+	margin-bottom: 10px;
 }
 
 .form-input {
-	display: block;
 	width: 100%;
-	height: 40px;
+	min-height: 40px;
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
 	padding-left: 42px;
-	outline: none;
+	color: var(--primary-contact-color);
+	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus,
-.form-input:hover {
-	border-color: var(--accent-color);
-	fill: var(--accent-color);
-	color: var(--accent-color);
+.form-input:hover,
+.form-input:focus {
 	cursor: pointer;
+	border: 1px solid var(--accent-color);
+	color: var(--accent-color);
+	fill: var(--accent-color);
 }
 
 .icon {
 	position: absolute;
+	left: 12px;
+	top: 50%;
+	transform: translate(0, -50%);
 	width: 18px;
 	height: 18px;
 	fill: var(--primary-text-color);
 	color: var(--primary-text-color);
-	top: 50%;
-	transform: translate(0, -50%);
-	left: 15px;
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field:hover > .icon,
+.form-field:focus > .icon {
+	fill: var(--accent-color);
 }
 
 .comment-area {
-	display: flex;
+	display: block;
 	width: 100%;
-	height: 120px;
-	resize: none;
+	min-height: 120px;
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
-	margin-top: 4px;
+	color: var(--primary-contact-color);
 	padding: 12px 16px;
-	outline: none;
+	margin: 0;
+	resize: none;
+	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.comment-area:focus,
 .comment-area:hover {
-	border-color: var(--accent-color);
 	cursor: pointer;
-}
-
-.comment-field {
-	display: flex;
-	flex-direction: column;
-	font-size: 12px;
-	color: rgba(117, 117, 117, 0.5);
-	margin-top: 10px;
-}
-
-.comment-field:hover,
-.comment-field:focus {
-	border-color: var(--accent-color);
-}
-
-.form-field:focus-within .icon {
+	border: 1px solid var(--accent-color);
+	color: var(--accent-color);
 	fill: var(--accent-color);
 }
 
-.checkbox {
-	appearance: none;
+.comment-area::placeholder {
+	color: rgba(117, 117, 117, 0.5);
 }
 
 .checkbox-label {
+	font-family: "Roboto";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
+	position: relative;
 	display: flex;
 	align-items: center;
-	margin-top: 20px;
+	margin-bottom: 30px;
+	padding-left: 24px;
+	line-height: 1.71;
+	letter-spacing: 0.03em;
+	color: var(--primary-contact-color);
+}
+
+.form-agreement-link {
+	text-decoration: underline;
+	color: var(--accent-color);
 }
 
 .icon-check {
-	display: block;
-	width: 15px;
+	position: absolute;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 16px;
 	height: 15px;
-	background-color: var(--menu-bck);
-	margin-left: 12px;
-  	margin-right: 9px;
-	fill: var(--primary-text-color);
-	color: var(--primary-text-color);
+	opacity: 1;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icon-check:focus {
-	fill: var(--accent-color);
+.checkbox:checked ~ .icon-check {
+	opacity: 0;
 }
 
 .icon-check-active {
 	position: absolute;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
 	width: 16px;
-	height: 16px;
-	left: 52px;
+	height: 15px;
 	opacity: 0;
+	fill: var(--accent-color);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:checked + .icon-check-active {
+.checkbox:checked ~ .icon-check-active {
 	opacity: 1;
 }
 
 .send {
-	font-family: 'Roboto';
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 200px;
+	height: 50px;
+	padding: 0;
 	font-weight: 700;
 	font-size: 16px;
 	line-height: 1.88;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
 	letter-spacing: 0.06em;
-	display: block;
-	margin-top: 30px;
-	margin-left: auto;
-	margin-right: auto;
-	width: 200px;
-	height: 50px;
-  	padding: 10px 55px;
 	color: var(--menu-bck);
-	border-color: var(--accent-color);
-	background: var(--accent-color);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	background-color: var(--accent-color);
+	border: none;
 	border-radius: 4px;
+	cursor: pointer;
 	transition-property: color background-color;
 	transition-duration: 250ms;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .send:hover {
-	background: var(--button-hover);
+	background-color: var(--button-hover);
+}
+
+.backdrop.is-hidden .modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, 50%) scale(0.2);
+	opacity: 0;
+}
+
+.backdrop .modal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(1);
+	opacity: 1;
+	background-color: var(--menu-bck);
+	border-radius: 4px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close {
+	display: block;
+	width: 18px;
+	height: 18px;
+	fill: currentColor;
+}
+
+.button-close {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	height: 30px;
+	margin: 0;
+	padding: 0;
+	color: var(--logo-text-color);
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 50%;
 	cursor: pointer;
+	background-color: inherit;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close:hover,
+.button-close:focus {
+	box-shadow: none;
+	fill: var(--accent-color);
+	color: var(--accent-color);
 }
