--- a/css/styles.css
+++ b/css/styles.css
@@ -601,7 +601,7 @@ ul {
 	margin-right: auto;
 }
 
-.social-links a {
+/* .social-links a {
 	display: block;
 	width: 44px;
 	height: 44px;
@@ -620,6 +620,35 @@ ul {
 	border-radius: 50%;
 	background-color: var(--accent-color);
 	fill: var(--menu-bck);
+} */
+
+.social-links {
+	display: flex;
+}
+
+.social-icon:not(:last-child) {
+	margin-right: 10px;
+}
+
+.footer-social-link {
+  display: block;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  color: inherit;
+  fill: var(--menu-bck);
+  align-items: center;
+  justify-content: center;
+  border: none;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 12px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--accent-color);
 }
 
 .links .icon + .icon {
